[gd_scene load_steps=3 format=3 uid="uid://c77luiir4aghj"]

[ext_resource type="Script" path="res://Scripts/buttons.gd" id="1_g6xr0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r8tbv"]
bg_color = Color(0.0476613, 5.62769e-05, 0.141394, 0.737255)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.743244, 0.640002, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="PauseMenu" type="CanvasLayer"]
layer = 8

[node name="Panel" type="Panel" parent="."]
offset_left = 375.0
offset_top = 29.0
offset_right = 769.0
offset_bottom = 614.0
theme_override_styles/panel = SubResource("StyleBoxFlat_r8tbv")

[node name="Main Menu" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 23.0
offset_top = 477.0
offset_right = 368.0
offset_bottom = 544.0
text = "Return to Main Menu"

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 55.0
offset_right = 393.0
offset_bottom = 112.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center] Game Paused"

[node name="Settings" type="Button" parent="Panel"]
offset_left = 23.0
offset_top = 290.0
offset_right = 368.0
offset_bottom = 357.0
text = "Settings
"
script = ExtResource("1_g6xr0")

[node name="back" type="Button" parent="Panel"]
offset_left = 23.0
offset_top = 202.0
offset_right = 368.0
offset_bottom = 269.0
text = "Return to Game
"
script = ExtResource("1_g6xr0")

[connection signal="pressed" from="Panel/Main Menu" to="Panel/back" method="_on_main_menu_pressed"]
[connection signal="pressed" from="Panel/Settings" to="Panel/Settings" method="_on_settings_pressed_pause"]
[connection signal="pressed" from="Panel/back" to="Panel/Settings" method="_on_back_pressed"]
